tests/endtoend/failure/expected/error_decl_in_if.compile.out
error_decl_in_if.silly:10:7: error: Undeclared variable secret
   10 | PRINT secret;  // should fail to compile
      |       ^
